normalization of the data

--- a/DataTransformTimeSeries.ipynb
+++ b/DataTransformTimeSeries.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit"
    ]
   },
   {
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +176,7 @@
        "[26999 rows x 6 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +195,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Normalizing the data is important for the 1D CNN model to work properly. We have 5 attributes with totally different scales. Without normalization, the model will be biased towards the attributes with larger scales (will learn larger weights for them)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before normalization, we will first split the data into training and validation sets in order to avoid data leakage between the sets. Then we will create new instances of the time series data by sliding a window over the data. Only after this we will normalize the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order for the classes to be balanced both in the training and test sets, we will use stratified splitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
+    "for train_index, test_index in split.split(df, df['class']):\n",
+    "    strat_train_set = df.loc[train_index]\n",
+    "    strat_test_set = df.loc[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "8      0.592593\n",
+       "108    0.340741\n",
+       "0      0.066667\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strat_test_set['class'].value_counts() / len(strat_test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "8      0.592578\n",
+       "108    0.340753\n",
+       "0      0.066669\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['class'].value_counts() / len(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Using the sliding window to create new instances that will be used for convolutions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,81 +291,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_instances = [] # list of windows for each column\n",
-    "new_labels = [] # list of windows for the label\n",
+    "def sliding_window(df, timeframe=40, stride=1):\n",
+    "    new_instances = [] # list of windows for each column\n",
+    "    new_labels = [] # list of windows for the label\n",
     "\n",
+    "    for col in df.columns[:-1]:  # we don't want to create windows for the label\n",
+    "        # create windows by shifting from the bottom of every column\n",
+    "        windows = [df[col].shift(-i) for i in range(timeframe)] \n",
+    "        \n",
+    "        # an instance is a set of windows for all columns\n",
+    "        # instances do not overlap\n",
+    "        # we only take instances that have all their values (exclude timeframe - 1 rows)\n",
+    "        instances = np.vstack(windows).T[:-timeframe+1:stride]\n",
+    "        new_instances.append(instances)\n",
     "\n",
-    "for col in df.columns[:-1]:  # we don't want to create windows for the label\n",
-    "    # create windows by shifting from the bottom of every column\n",
-    "    windows = [df[col].shift(-i) for i in range(timeframe)] \n",
-    "    \n",
-    "    # an instance is a set of windows for all columns\n",
-    "    # instances do not overlap\n",
-    "    # we only take instances that have all their values (exclude timeframe - 1 rows)\n",
-    "    instances = np.vstack(windows).T[:-timeframe+1:stride]\n",
-    "    \n",
-    "    new_instances.append(instances)\n",
+    "    labels_windows = [df[df.columns[-1]].shift(-i) for i in range(timeframe)]\n",
+    "    new_labels = np.vstack(labels_windows).T[:-timeframe+1:stride]\n",
     "\n",
-    "labels_windows = [df[df.columns[-1]].shift(-i) for i in range(timeframe)]\n",
-    "new_labels = np.vstack(labels_windows).T[:-timeframe+1:stride]"
+    "    return np.stack(new_instances, axis=-1), new_labels\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dimensions des instances transformées : (26960, 40, 5)\n",
-      "Dimensions des labels transformés : (26960, 40)\n"
+      "Dimensions of transformed training instances: (21560, 40, 5)\n",
+      "Dimensions of transformed training labels : (21560, 40)\n",
+      "Dimensions of transformed test instances: (5361, 40, 5)\n",
+      "Dimensions of transformed test labels : (5361, 40)\n"
      ]
     }
    ],
    "source": [
-    "X = np.stack(new_instances, axis=-1)\n",
-    "y = new_labels\n",
+    "X_train, y_train = sliding_window(strat_train_set)\n",
     "\n",
-    "print(\"Dimensions of transformed instances:\", X.shape)\n",
-    "print(\"Dimensions of transformed labels :\", y.shape)"
+    "X_test, y_test = sliding_window(strat_test_set)\n",
+    "\n",
+    "print(\"Dimensions of transformed training instances:\", X_train.shape)\n",
+    "print(\"Dimensions of transformed training labels :\", y_train.shape)\n",
+    "print(\"Dimensions of transformed test instances:\", X_test.shape)\n",
+    "print(\"Dimensions of transformed test labels :\", y_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of X_train: (21568, 40, 5)\n",
-      "Shape of X_test: (5392, 40, 5)\n",
-      "Shape of y_train: (21568, 40)\n",
-      "Shape of y_test: (5392, 40)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(21560, 40)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "print(\"Shape of X_train:\", X_train.shape)\n",
-    "print(\"Shape of X_test:\", X_test.shape)\n",
-    "print(\"Shape of y_train:\", y_train.shape)\n",
-    "print(\"Shape of y_test:\", y_test.shape)\n"
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# create a MinMaxScaler instance\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "# reshape X_train to 2D array (instances, features)\n",
+    "X_train_reshaped = X_train.reshape(-1, X_train.shape[-1])\n",
+    "\n",
+    "X_train_normalized = scaler.fit_transform(X_train_reshaped)\n",
+    "\n",
+    "# reshape back to 3D array (instances, timeframe, features)\n",
+    "X_train_normalized = X_train_normalized.reshape(X_train.shape)\n",
+    "\n",
+    "X_test_reshaped = X_test.reshape(-1, X_test.shape[-1])\n",
+    "X_test_normalized = scaler.transform(X_test_reshaped)\n",
+    "X_test_normalized = X_test_normalized.reshape(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -295,9 +409,8 @@
     }
    ],
    "source": [
-    "X_train_df = pd.DataFrame(X_train.reshape(X_train.shape[0], -1)) # Reshape X_test into 2D\n",
+    "X_train_df = pd.DataFrame(X_train_normalized.reshape(X_train.shape[0], -1)) # reshape X_test into 2D (instances, features*window)\n",
     "y_df = pd.DataFrame(y_train)\n",
-    "\n",
     "X_train_file_path = \"./data/X_train_transformed.csv\"\n",
     "y_file_path = \"./data/y_train_transformed.csv\"\n",
     "\n",
@@ -310,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +436,7 @@
     }
    ],
    "source": [
-    "X_test_df = pd.DataFrame(X_test.reshape(X_test.shape[0], -1))\n",
+    "X_test_df = pd.DataFrame(X_test_normalized.reshape(X_test.shape[0], -1))\n",
     "y_df = pd.DataFrame(y_test)\n",
     "\n",
     "X_test_file_path = \"./data/X_test_transformed.csv\"\n",
