extracting last timeframe label for each window

--- a/DataTransformTimeSeries.ipynb
+++ b/DataTransformTimeSeries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "[26999 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,6 +189,26 @@
     "# delete timestamp column\n",
     "df = df.drop(['timestamp'], axis=1)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0, 108,   8])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['class'].unique()"
    ]
   },
   {
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +259,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +283,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,9 +328,11 @@
     "        # we only take instances that have all their values (exclude timeframe - 1 rows)\n",
     "        instances = np.vstack(windows).T[:-timeframe+1:stride]\n",
     "        new_instances.append(instances)\n",
+    "    \n",
+    "    # extracting labels of the last timestamp for each window\n",
+    "    labels_window = df[df.columns[-1]].shift(-timeframe+1)\n",
+    "    new_labels = np.array(labels_window[:-timeframe+1:stride]).astype(int)\n",
     "\n",
-    "    labels_windows = [df[df.columns[-1]].shift(-i) for i in range(timeframe)]\n",
-    "    new_labels = np.vstack(labels_windows).T[:-timeframe+1:stride]\n",
     "\n",
     "    return np.stack(new_instances, axis=-1), new_labels\n",
     "\n"
@@ -318,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -326,9 +348,9 @@
      "output_type": "stream",
      "text": [
       "Dimensions of transformed training instances: (21560, 40, 5)\n",
-      "Dimensions of transformed training labels : (21560, 40)\n",
+      "Dimensions of transformed training labels : (21560,)\n",
       "Dimensions of transformed test instances: (5361, 40, 5)\n",
-      "Dimensions of transformed test labels : (5361, 40)\n"
+      "Dimensions of transformed test labels : (5361,)\n"
      ]
     }
    ],
@@ -345,22 +367,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21560, 40)"
+       "(21560,)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8, 8, 8, ..., 8, 8, 8])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
    ]
   },
   {
@@ -372,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
