first training of a simple CNN using categorical cross entropy and one hot encoding of labels. not impressive.

--- a/DataTransformTimeSeries.ipynb
+++ b/DataTransformTimeSeries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "[26999 rows x 6 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "array([  0, 108,   8])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "(21560,)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "array([8, 8, 8, ..., 8, 8, 8])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -456,8 +456,8 @@
     "X_train_file_path = \"./data/X_train_transformed.csv\"\n",
     "y_file_path = \"./data/y_train_transformed.csv\"\n",
     "\n",
-    "X_train_df.to_csv(X_train_file_path, index=False, sep=' ')\n",
-    "y_df.to_csv(y_file_path, index=False, sep=' ')\n",
+    "X_train_df.to_csv(X_train_file_path, index=False,header=False, sep=' ')\n",
+    "y_df.to_csv(y_file_path, index=False, header=False, sep=' ')\n",
     "\n",
     "print(\"Transformed instances saved to:\", X_train_file_path)\n",
     "print(\"Transformed labels saved to:\", y_file_path)"
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -484,8 +484,8 @@
     "X_test_file_path = \"./data/X_test_transformed.csv\"\n",
     "y_file_path = \"./data/y_test_transformed.csv\"\n",
     "\n",
-    "X_test_df.to_csv(X_test_file_path, index=False, sep=' ')\n",
-    "y_df.to_csv(y_file_path, index=False, sep=' ')\n",
+    "X_test_df.to_csv(X_test_file_path, index=False, header=False, sep=' ')\n",
+    "y_df.to_csv(y_file_path, index=False, header=False, sep=' ')\n",
     "\n",
     "print(\"Transformed instances saved to:\", X_test_file_path)\n",
     "print(\"Transformed labels saved to:\", y_file_path)"
